--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1037,6 +1037,11 @@ alertmanager:
 ## Using default values from https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
 ##
 grafana:
+  grafana.ini:
+    security:
+      allow_embedding: true
+    server:
+      root_url: "%(protocol)s://ae3ff225f79e74e12ac4c63cbdbf8579-602980979.ap-northeast-2.elb.amazonaws.com"
   enabled: true
   namespaceOverride: ""
 
